# osu-beatmapset-completion

./: Cargo.toml  test.sh
src/: cli.rs  main.rs
src/osu/: model.rs
src/osz_finder/: mod.rs
src/pathtree_stylizer/: mod.rs
