[package]
name = "osu-player-trainer"
version = "0.1.0"
authors = ["Adler Neves <adlerosn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "^0.2"
derivative = "^2"
derive-new = "^0.5"
derive_more = "^0.99"
rusqlite = { version = "^0.24", features = ["backup"] }
osu-db = "^0.2"
unrar = "^0.4"
zip = "^0.5"
compress-tools = "^0.10"
ansi_term = "^0.12"